--- a/app/views/add-product-v4/do-you-have-the-barcode-error-2.html
+++ b/app/views/add-product-v4/do-you-have-the-barcode-error-2.html
@@ -39,7 +39,7 @@
     text: "Enter the product barcode number"
   },
   label: {
-    text: "Barcode number (GTIN, EAN or UPC)"
+    html: "Barcode number (<abbr>GTIN</abbr>, <abbr></abbr>EAN</abbr> or <abbr></abbr>UPC</abbr>)"
   },
   hint: {
       classes: "govuk-!-font-size-16",
