--- a/app/views/add-product-v4/does-the-product-have-a-brand.html
+++ b/app/views/add-product-v4/does-the-product-have-a-brand.html
@@ -44,7 +44,7 @@
     }
   },
   hint: {
-    text: "For example, Dyson, Silentnight or Panasonic."
+    text: "For example, a manufacturer’s brand like Dyson, Silentnight or Panasonic."
   },
   items: [
     {
