--- a/app/views/add-product-v4/upload-a-product-image.html
+++ b/app/views/add-product-v4/upload-a-product-image.html
@@ -49,7 +49,7 @@
             },
             hint: {
                 classes: "govuk-!-font-size-16",
-                text: "For example, PlayStation 5 or Dyson Power Wave 3300."
+                text: "For example, PlayStation 5 Console or Dyson Power Wave 3300."
             },
             classes: "govuk-input--width-20",
             id: "imagetitle",
