--- a/app/views/add-product-v4/what-is-the-product-name-error.html
+++ b/app/views/add-product-v4/what-is-the-product-name-error.html
@@ -42,7 +42,7 @@
   },
   hint: {
     classes: "govuk-!-margin-bottom-6",
-    html: "Try to include a model number and model name. <br>For example, PlayStation 5, or EH-NE83-K895 Power Air."
+    html: "Try to include a model number and model name. <br>For example, PlayStation 5 Console 9395003, or EH-NE83-K895 Power Air."
   },
   errorMessage: {
     text: "Enter the product name"
