--- a/app/views/add-product-v4/do-you-have-the-barcode-error.html
+++ b/app/views/add-product-v4/do-you-have-the-barcode-error.html
@@ -36,7 +36,7 @@
   spellcheck: false,
   classes: "govuk-!-width-one-third",
   label: {
-    text: "Barcode number (GTIN, EAN or UPC)"
+    html: "Barcode number (<abbr>GTIN</abbr>, <abbr></abbr>EAN</abbr> or <abbr></abbr>UPC</abbr>)"
   },
   hint: {
       classes: "govuk-!-font-size-16",
