--- a/app/views/add-product-v4/upload-a-product-image-error.html
+++ b/app/views/add-product-v4/upload-a-product-image-error.html
@@ -88,7 +88,7 @@
             },
             hint: {
                 classes: "govuk-!-font-size-16",
-                text: "For example, PlayStation 5 or Dyson Power Wave 3300."
+                text: "For example, PlayStation 5 Console or Dyson Power Wave 3300."
             },
             errorMessage: {
                 text: "Enter a title for the image"
