--- a/app/views/add-product-v4/might-already-exist-error.html
+++ b/app/views/add-product-v4/might-already-exist-error.html
@@ -13,13 +13,24 @@
 
 
 {% block content %}
+
+{{ govukErrorSummary({
+  titleText: "There is a problem",
+  errorList: [
+    {
+      text: "Select yes if this is your product",
+      href: "#isit"
+    }
+  ]
+}) }}
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
         <form class="form" action="#" method="post" novalidate>
 
-            <div class="govuk-form-group">
-                <fieldset class="govuk-fieldset" aria-describedby="isit-hint">
+            <div class="govuk-form-group govuk-form-group--error">
+                <fieldset class="govuk-fieldset" aria-describedby="isit-hint isit-error">
 
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                         <h1 class="govuk-fieldset__heading">
@@ -30,6 +41,10 @@
                     <div id="isit-hint" class="govuk-hint">
                         It appears that the product you are adding might already exist in our records?
                     </div>
+
+                    <span id="isit-error" class="govuk-error-message">
+                        <span class="govuk-visually-hidden">Error:</span> Select yes if this is your product
+                    </span>
 
                     <div class="govuk-radios govuk-!-padding-top-3 govuk-!-padding-bottom-1" data-module="govuk-radios">
                         <div class="govuk-radios__item">
