--- a/app/views/add-product-v4/might-already-exist-error.html
+++ b/app/views/add-product-v4/might-already-exist-error.html
@@ -50,7 +50,7 @@
                         <div class="govuk-radios__item">
                             <input class="govuk-radios__input" id="isit" name="isit" type="radio" value="yes" aria-describedby="the-product">
                             <label class="govuk-label govuk-radios__label" for="isit">
-                                Yes <!--(create the case with this product)-->
+                                Yes
                             </label>
                         </div>
                         <div class="govuk-radios__conditional govuk-!-padding-bottom-8">
