--- a/app/views/add-product-v4/select-a-product-list-04.html
+++ b/app/views/add-product-v4/select-a-product-list-04.html
@@ -112,7 +112,7 @@
                     Continue
                 </button>
 
-                <a class="govuk-link" href="#">Search again</a>
+                <a class="govuk-link govuk-link--no-visited-state" href="#">Search again</a>
             </div>
 
         </form>
