--- a/app/views/add-product-v4/start.html
+++ b/app/views/add-product-v4/start.html
@@ -38,6 +38,36 @@
 
       <p class="govuk-body-l">For the error messages to work reliably, you may occasionally have to use the 'Clear data' option (in the footer).</p>
 
+      <ol class="govuk-list govuk-list--number">
+        <li><a class="govuk-link govuk-link--no-visited-state" href="is-this-case-related-to-covid.html">is-this-case-related-to-covid</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="reason-for-creating-case.html">reason-for-creating-case</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="why-is-the-product-of-concern.html">why-is-the-product-of-concern</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="is-case-counterfeit.html">is-case-counterfeit</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="do-you-have-the-barcode.html">do-you-have-the-barcode</a>
+          <ul>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="select-a-product-barcode.html">select-a-product-barcode</a></li>
+          </ul>
+        </li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="search-for-an-existing-product.html">search-for-an-existing-product</a>
+          <ul>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="select-a-product.html">select-a-product</a></li>
+          </ul>
+        </li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="does-the-product-have-a-brand.html">does-the-product-have-a-brand</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="what-is-the-product-name.html">what-is-the-product-name</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="what-is-the-product-category.html">what-is-the-product-category</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="does-the-product-have-marking.html">does-the-product-have-marking</a>
+          <ul>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="might-already-exist.html">might-already-exist</a></li>
+          </ul>
+        </li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="describe-the-product.html">describe-the-product</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="when-was-the-product-placed.html">when-was-the-product-placed</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="can-you-provide-an-image.html">can-you-provide-an-image</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="upload-a-product-image.html">upload-a-product-image</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="how-many-units-are-affected.html">how-many-units-are-affected</a></li>
+      </ol>
+
     </div>
 
     <div class="govuk-grid-column-one-third">
