--- a/app/views/add-product-v4/upload-a-product-image.html
+++ b/app/views/add-product-v4/upload-a-product-image.html
@@ -55,8 +55,7 @@
             id: "imagetitle",
             name: "imagetitle",
             attributes: {
-                maxlength: "250",
-                autocomplete: "off"
+                maxlength: "250"
             }
         }) }}
 
