--- a/app/views/add-product-v4/what-is-the-product-category-error-2.html
+++ b/app/views/add-product-v4/what-is-the-product-category-error-2.html
@@ -59,16 +59,16 @@
             items: [
                 {
                 value: "val01",
-                text: "Lorem ipsum etc lorem iptu",
+                text: "Electrical appliances and equipment",
                 selected: true
                 },
                 {
                 value: "val02",
-                text: "Ipsum Lorem ipsum etc"
+                text: "Cosmetics"
                 },
                 {
                 value: "val03",
-                text: "Lorem lorem ipsoipsum"
+                text: "Childcare articles and children’s equipment"
                 },
                 {
                 value: "val04",
@@ -95,7 +95,8 @@
         },
         classes: "govuk-input--width-10",
         hint: {
-            text: "Enter a subcategory. For example, Face mask, or Hair dryer"
+            text: "Enter a subcategory. For example, Washing machine, Shampoo or Highchair.",
+            classes: "govuk-!-font-size-16"
         },
         errorMessage: {
             text: "Enter a product subcategory",
