--- a/app/views/add-product-v4/why-is-the-product-of-concern.html
+++ b/app/views/add-product-v4/why-is-the-product-of-concern.html
@@ -41,31 +41,40 @@
         ]
     })}}
 
-    {{ govukTextarea({
-    name: "why-unsafe",
-    id: "why-unsafe",
-    classes: "govuk-!-width-three-quarters",
-    label: {
-        text: "Why is the product unsafe?",
-        classes: "govuk-label",
-        isPageHeading: false
-    },
-    hint: {
-        classes: "govuk-!-font-size-16",
-        text: "If the product has been involved in an incident include this additional information."
-    }
+    {{ govukCharacterCount({
+      name: "why-unsafe",
+      id: "why-unsafe",
+        classes: "govuk-!-width-three-quarters",
+        label: {
+            text: "Why is the product unsafe?",
+            classes: "govuk-label",
+            isPageHeading: false
+        },
+      maxlength: 1500,
+      hint: {
+          classes: "govuk-!-font-size-16",
+          text: "If the product has been involved in an incident include this additional information."
+      },
+      countMessage: {
+          classes: "govuk-!-font-size-16"
+      }
     }) }}
+
 {% endset -%}
 
 {% set noncompliantHtml %}
-    {{ govukTextarea({
+    {{ govukCharacterCount({
     name: "why-noncompliant",
     id: "why-noncompliant",
     classes: "govuk-!-width-three-quarters",
+    maxlength: 1500,
     label: {
         text: "Why is the product non-compliant?",
         classes: "govuk-label",
         isPageHeading: false
+    },
+    countMessage: {
+        classes: "govuk-!-font-size-16"
     }
     }) }}
 {% endset -%}
