--- a/app/views/add-product-v4/choose-a-product-list-01.html
+++ b/app/views/add-product-v4/choose-a-product-list-01.html
@@ -91,7 +91,7 @@
                     Continue
                 </button>
 
-                <a class="govuk-link" href="#">Search again</a>
+                <a class="govuk-link govuk-link--no-visited-state" href="#">Search again</a>
             </div>
 
         </form>
