--- a/app/views/add-product-v4/upload-a-product-image-error.html
+++ b/app/views/add-product-v4/upload-a-product-image-error.html
@@ -97,8 +97,7 @@
             id: "imagetitle",
             name: "imagetitle",
             attributes: {
-                maxlength: "250",
-                autocomplete: "off"
+                maxlength: "250"
             }
         }) }}
 
