--- a/app/views/add-product-v4/select-a-product-barcode.html
+++ b/app/views/add-product-v4/select-a-product-barcode.html
@@ -28,7 +28,7 @@ select-a-product{% extends "layout-01.html" %}
 </div>
 
 <div class="govuk-grid-row">
-    <section class="govuk-grid-column-two-thirds" role="region" aria-label="search-results-list">
+    <section class="govuk-grid-column-two-thirds" role="region" aria-label="list">
         <div class="govuk-grid-row">
            <div class="govuk-grid-column-full govuk-!-margin-bottom-1">
                 <p class="govuk-body">
