--- a/app/views/cosmetics-search-designs/search-page-01.html
+++ b/app/views/cosmetics-search-designs/search-page-01.html
@@ -230,7 +230,7 @@
         </div>
 
         <div class="govuk-grid-row">
-            <div class="govuk-grid-column-full" role="region" aria-label="search-results-list" id="results-order" aria-live="polite">
+            <div class="govuk-grid-column-full" role="region" aria-label="list" id="results-order" aria-live="polite">
                 <ul class="govuk-list opss-list--borders">
 
                     <li>
