--- a/app/views/index.html
+++ b/app/views/index.html
@@ -68,11 +68,11 @@
 
       </ul>
 
-      <h2 class="govuk-heading-m">Nanomaterials</h2>
+      <!--h2 class="govuk-heading-m">Nanomaterials</h2>
       <ul class="govuk-list govuk-list--bullet">
         <li><a class="govuk-link" href="/nanomaterials-1149/nanomaterials.html">Nanomaterials</a></li>
         <li><a class="govuk-link" href="/nanomaterials-1149/nanomaterials-details.html">Nanomaterials details</a></li>
-      </ul>
+      </ul-->
 
 
 
