--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -27,5 +27,5 @@ $govuk-assets-path: '/govuk/assets/';
 
 
 //styles for PSD and MSA
-@import "opss/opss-psd";
+//@import "opss/opss-psd";
 @import "opss/opss-msa";
