--- a/app/views/nanomaterials-1149/nanomaterials.html
+++ b/app/views/nanomaterials-1149/nanomaterials.html
@@ -5,42 +5,282 @@
 {% endblock %}
 
 
-
-
 {% block content %}
-
-
-
-
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-      <h1>Some more content</h1>
+
+        <div class="govuk-grid-row">
+          <div class="govuk-grid-column-two-thirds">
+            <h1 class="govuk-heading-l">
+              Nanomaterials
+            </h1>
+          </div>
+          <div class="govuk-grid-column-one-third">
+            <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
+              Add a nanomaterial
+            </a>
+          </div>
+        </div>
+
     </div>
 </div>
 
+<hr class="govuk-section-break govuk-section-break--l govuk-!-margin-bottom-5 govuk-section-break--visible">
 
+<div class="govuk-grid-row">
+  <section class="govuk-grid-column-full">
 
-
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
-
-hello
-      <form action="#" method="post" novalidate>
-
-
-
-
-
-
-{{ govukButton({
-  text: "Continue"
-}) }}
-
-      </form>
-
-
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-one-half">
+        <h2 class="govuk-heading-s">
+          Notified nanomaterials
+        </h2>
+      </div>
+      <div class="govuk-grid-column-one-half">
+        <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-14 opss-text-align-right">
+          Download a <abbr>CSV</abbr> of notified nanomaterials
+        </a>
+      </div>
     </div>
-  </div>
-{% endblock %}
 
+    <ul class="govuk-list opss-list--borders opss-list--borders-no-top">
+      <li>
+        <h2 class="govuk-heading-s">
+          <a class="govuk-link" href="/notifications/99737442">CTPA moisture conditioner</a>
+        </h2>
+        <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              First notified in the <abbr>UK</abbr>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              4 May 2021
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Notified in <abbr>EU</abbr>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              No
+            </dd>
+          </div>
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+              <abbr>UK</abbr> nanomaterial number
+              </dt>
+              <dd class="govuk-summary-list__value">
+                1000094
+              </dd>
+            </div>
+        </dl>
+      </li>
+      <li>
+        <h2 class="govuk-heading-s">
+          <a class="govuk-link" href="/notifications/3600065">CSV with no internal reference</a>
+        </h2>
+        <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              First notified in the <abbr>UK</abbr>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              11 May 2021
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Notified in <abbr>EU</abbr>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              No
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+            <abbr>UK</abbr> nanomaterial number
+            </dt>
+            <dd class="govuk-summary-list__value">
+              15766863112607598
+            </dd>
+          </div>
+        </dl>
+      </li>
+      <li>
+        <h2 class="govuk-heading-s">
+          <a class="govuk-link" href="/notifications/19414346">Multi-component Frame formulation Nano</a>
+        </h2>
+        <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              First notified in the <abbr>UK</abbr>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              13 May 2021
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Notified in <abbr>EU</abbr>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              17 April 2017
+            </dd>
+          </div>
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+              <abbr>UK</abbr> nanomaterial number
+              </dt>
+              <dd class="govuk-summary-list__value">
+                15766863112607598
+              </dd>
+            </div>
+        </dl>
+      </li>
+      <li>
+        <h2 class="govuk-heading-s">
+          <a class="govuk-link" href="/notifications/12446312">Multi-Item-Range Doc_pH </a>
+        </h2>
+        <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              First notified in the <abbr>UK</abbr>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              4 May 2021
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Notified in <abbr>EU</abbr>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              13 September 2019
+            </dd>
+          </div>
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+              <abbr>UK</abbr> nanomaterial number
+              </dt>
+              <dd class="govuk-summary-list__value">
+                1006087247
+              </dd>
+            </div>
+        </dl>
+      </li>
+      <li>
+        <h2 class="govuk-heading-s">
+          <a class="govuk-link" href="/notifications/2933316">SingleItem-CMRs+Nano</a>
+        </h2>
+        <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              First notified in the <abbr>UK</abbr>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              13 May 2021
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Notified in <abbr>EU</abbr>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              No
+            </dd>
+          </div>
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+              <abbr>UK</abbr> nanomaterial number
+              </dt>
+              <dd class="govuk-summary-list__value">
+                157668631177685
+              </dd>
+            </div>
+        </dl>
+      </li>
+      <li>
+        <h2 class="govuk-heading-s">
+          <a class="govuk-link" href="/notifications/39954534">Test product1</a>
+        </h2>
+        <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              First notified in the <abbr>UK</abbr>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              4 May 2021
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Notified in <abbr>EU</abbr>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              No
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+            <abbr>UK</abbr> nanomaterial number
+            </dt>
+            <dd class="govuk-summary-list__value">
+              15766863112607598
+            </dd>
+          </div>
+        </dl>
+      </li>
+      <li>
+        <h2 class="govuk-heading-s">
+          <a class="govuk-link" href="/notifications/27683733">Test export notifications</a>
+        </h2>
+        <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              First notified in the <abbr>UK</abbr>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              11 May 2021
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Notified in <abbr>EU</abbr>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              23 August 2016
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+            <abbr>UK</abbr> nanomaterial number
+            </dt>
+            <dd class="govuk-summary-list__value">
+              15766863112607598
+            </dd>
+          </div>
+        </dl>
+      </li>
+    </ul>
+
+    <nav class="opss-pagination-link">
+        <ul>
+            <li class="opss-pagination-link__wrap opss-pagination-link--prev">
+                <a href="" class="govuk-link govuk-link--no-visited-state">
+                    <span>Previous page</span><span class="govuk-visually-hidden">:</span> <span>Page 1 of 3</span>
+                </a>
+            </li>
+            <li class="opss-pagination-link__wrap opss-pagination-link--next">
+                <a href="" class="govuk-link govuk-link--no-visited-state">
+                    <span>Next page</span><span class="govuk-visually-hidden">:</span> <span>Page 3 of 3</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+
+  </section>
+</div>
+
+{% endblock %}
