--- a/app/views/layout-01.html
+++ b/app/views/layout-01.html
@@ -46,7 +46,7 @@
   }) }}
 {% endblock %}
 
-{% set mainClasses = mainClasses | default("govuk-main-wrapper--auto-spacing") %}
+{% set mainClasses = mainClasses | default("") %} <!-- govuk-main-wrapper govuk-main-wrapper--auto-spacing -->
 
 {% if useAutoStoreData %}
   {% block footer %}
