--- a/app/views/layout-02-beta.html
+++ b/app/views/layout-02-beta.html
@@ -52,10 +52,12 @@
     html: 'This is a new service – your <a class="govuk-link" href="https://forms.office.com/Pages/ResponsePage.aspx?id=BXCsy8EC60O0l-ZJLRst2EL9OANlth1GkVkjQONYxK1URUFIQVhSRE5aNU4ySDU3N09RQUJERFRVSi4u">feedback</a> will help us to improve it.'
     }) }}
   </div>
-
-
-
   {% include "opss-nav.html" %}
+
+{% set mainClasses = mainClasses | default("govuk-main-wrapper") %}
+
+
+
 {% endblock %}
 
 
